Fixed spacing on login and signup popup.

--- a/src/Main.css
+++ b/src/Main.css
@@ -152,11 +152,20 @@ body {
 	text-align: center;
 }
 
+.popup label {
+	margin-top: 20px;
+}
+
+.popup input {
+	margin-top: 0px;
+}
+
 .popupbtn {
     color: #04213F;
     background: #04CCFF;
     border: 2px solid #04CCFF;
-    border-radius: 8px;
+	border-radius: 8px;
+	margin-top: 20px;
 }
 
 .disabled {
@@ -196,6 +205,7 @@ body {
 	border: 2px solid #04CCFF;
 	border-radius: 8px;
 	margin-left: 50px;
+	margin-top: 20px;
 }
 
 .cancelbtn:hover {
